--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^5.22.0",
+    "@types/decimal.js": "^0.0.32",
+    "decimal.js": "^10.6.0",
     "next": "13.5.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.71.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20",
